# AI-Prompts

./: .gitignore  CMakeLists.txt  FileManager.pro  FileManager_README.md  README.md  example_probe_questions.md  filemanager.cpp  filemanager.h  main.cpp  test_functionality.sh
.vim/: colortoggler.vim
Checklists/: CodeImprovements.md
behavior-prompts/: copilot_gemini_2.5_pro  copilot_gemini_2.5_pro.md  rust-specific.md
behavior-prompts/copilot/Claude_3.7_sonnet/: verify-code-understantding.md
behavior-prompts/copilot/gemini_2.5_pro/: default.md  default.md.bak
system-prompts/: CopilotDefaultInstructions.md
